--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: src
+
+      - name: List Repository Directory Contents
+        run: |
+          cd src  # Change to the checked-out repository directory
+          echo "Current directory: $(pwd)"  # Print the current directory path
+          ls -la  # List all files in the current directory
        
 
     
