--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -17,20 +17,20 @@ on:
       verbose:
         description: 'Verbose output flag'
         required: false
-        default: ''
+        default: '-v'
 
 jobs:
   automerge:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the main repository
+      # Step 1: Checkout the default repository
       - name: Checkout main repository
         uses: actions/checkout@v4
         with:
           path: src 
 
-      # Step 2: Checkout the second repository
+      # Step 2: Checkout the zero-devops-utils repository
       - name: Checkout zero-devops-utils repository
         uses: actions/checkout@v4
         with:
@@ -42,7 +42,7 @@ jobs:
       - name: Get Source and Target Repository URLs
         run: |
           SRC_REPO_URL="https://github.com/${GITHUB_REPOSITORY}.git"
-          SECOND_REPO_URL="git@github.com:anunaidu/Copyright-checker.git"  # SSH URL
+          SECOND_REPO_URL="git@github.com:anunaidu/Copyright-checker.git"
           echo "Source repository URL: $SRC_REPO_URL"
           echo "Second repository URL: $SECOND_REPO_URL"
           echo "SRC_REPO_URL=$SRC_REPO_URL" >> $GITHUB_ENV
@@ -56,9 +56,9 @@ jobs:
           MAILTO="anu@gmail.com"  # Hardcoded value for email recipient
           DONT_RESOLVE="-d"  # Hardcoded flag for don't resolve
           DONT_UPDATE="-n"   # Hardcoded flag for don't update
-          VERBOSE="${{ github.event.inputs.verbose }}"  # Optional verbose flag
+          VERBOSE="${{ github.event.inputs.verbose }}"  # Verbose flag
 
-          echo "Running Automerge Script with source branch: $SRC_BRANCH and target branch: $TARGET_BRANCH...
+          echo "Running Automerge Script with source branch: $SRC_BRANCH and target branch: $TARGET_BRANCH..."
           
           perl cm-utils/automerge/automerge-git-via-merge.pl \
             -r ${GITHUB_WORKSPACE}/src \
@@ -66,10 +66,8 @@ jobs:
             -t ${TARGET_BRANCH} \
             -s ${SRC_REPO_URL} \
             -b ${SECOND_REPO_URL} \
-            -m ${MAILTO} ${DONT_RESOLVE} ${DONT_UPDATE} ${VERBOSE}"
+            -m ${MAILTO} ${DONT_RESOLVE} ${DONT_UPDATE} ${VERBOSE}
 
         env:
           SRC_REPO_URL: ${{ env.SRC_REPO_URL }}
           SECOND_REPO_URL: ${{ env.SECOND_REPO_URL }}
-          SRC_BRANCH: ${{ github.event.inputs.source-branch }}
-          TARGET_BRANCH: ${{ github.event.inputs.target-branch }}
