--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -43,7 +43,7 @@ jobs:
         run: |
           echo "Setting repository URLs..."
           echo "SRC_REPO_URL=https://github.com/${GITHUB_REPOSITORY}.git" >> $GITHUB_ENV
-          echo "SECOND_REPO_URL=git@github.com:anunaidu/Copyright-checker.git" >> $GITHUB_ENV 
+          echo "SECOND_REPO_URL=https://github.com/anunaidu/Copyright-checker.git" >> $GITHUB_ENV 
 
       # Step 4: Run the Perl Automerge Script
       - name: Run Automerge Script
