--- a/.github/workflows/automerge-main.yaml
+++ b/.github/workflows/automerge-main.yaml
@@ -26,13 +26,12 @@ jobs:
 
       - name: Authenticate GitHub CLI
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+          echo "${{ secrets.MY_CUSTOM_TOKEN }}" | gh auth login --with-token
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.MY_CUSTOM_TOKEN }}
 
-      - name: Clear GH_TOKEN
-        run: |
-          unset GH_TOKEN
+      - name: Verify authentication
+        run: gh auth status
 
       - name: Set up Git
         run: |
@@ -65,14 +64,14 @@ jobs:
           git merge ${{ github.event.inputs.srcBranch }} || echo "Conflict detected" > conflict.txt
           if [ -f conflict.txt ]; then
             echo "Merge conflicts detected. Sending email."
-             mail mahi.naidu770@gmail.com
+            # Configure your mail sending here
           fi
 
       - name: Send success email
         if: success()
         run: |
           echo "Workflow succeeded. Sending email."
-           mail mahi.naidu770@gmail.com
+          # Configure your mail sending here
 
       - name: Clean up
         run: |
