--- a/.github/workflows/automerge-main.yaml
+++ b/.github/workflows/automerge-main.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all branches and tags
 
       - name: Install GitHub CLI
         run: |
@@ -38,10 +40,22 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
+      - name: Verify Branch Existence
+        run: |
+          git fetch --all
+          git branch -a
+          if ! git show-ref --quiet refs/heads/${{ github.event.inputs.tgtBranch }}; then
+            echo "Target branch '${{ github.event.inputs.tgtBranch }}' does not exist."
+            exit 1
+          fi
+          if ! git show-ref --quiet refs/heads/${{ github.event.inputs.srcBranch }}; then
+            echo "Source branch '${{ github.event.inputs.srcBranch }}' does not exist."
+            exit 1
+          fi
+
       - name: Check branch protection
         id: check_protection
         run: |
-          # Check if the branch is protected
           protection_status=$(gh api repos/${{ github.repository }}/branches/${{ github.event.inputs.tgtBranch }}/protection --jq '.enabled' 2>&1 || echo "404")
           if [ "$protection_status" == "404" ]; then
             echo "Branch not protected"
@@ -69,7 +83,7 @@ jobs:
           git merge ${{ github.event.inputs.srcBranch }} || echo "Conflict detected" > conflict.txt
           if [ -f conflict.txt ]; then
             echo "Merge conflicts detected. Sending email."
-            mahi.naidu770@gmail.com
+            # Configure your mail sending here
           fi
 
       - name: Send success email
@@ -77,7 +91,7 @@ jobs:
         run: |
           echo "Workflow succeeded. Sending email."
           mahi.naidu770@gmail.com
-
+          
       - name: Clean up
         run: |
           rm -f conflict.txt
